# Testing

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
test/: test_main.py
test/temp/: test_main2.py
