[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Moein"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
